<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaterIntakeManagementFragment">

    <!-- Water Intake Goal CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWaterIntake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvWaterIntakeGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:textSize="18sp"/>
    </androidx.cardview.widget.CardView>

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/waterLevelProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/custom_progress_bar"
        app:layout_constraintTop_toBottomOf="@id/cardViewWaterIntake"
        app:layout_constraintBottom_toTopOf="@id/cardViewWaterDrops"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Remaining Water TextView -->
    <TextView
        android:id="@+id/tvRemainingWater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="@id/waterLevelProgress"
        app:layout_constraintBottom_toBottomOf="@id/waterLevelProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Water Drops CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWaterDrops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        app:cardElevation="4dp"
        android:background="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <!-- Water Drops LinearLayout -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp">

            <!-- Water Drop 180ml -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imgWaterDrop180ml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_180ml"
                    android:contentDescription="@string/water_drop_180ml"
                    android:onClick="onWaterDropClick" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_drop_180ml"/>
            </LinearLayout>

            <!-- Water Drop 350ml -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imgWaterDrop350ml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_350ml"
                    android:contentDescription="@string/water_drop_350ml"
                    android:onClick="onWaterDropClick" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_drop_350ml"/>
            </LinearLayout>
            <!-- Water Drop 500ml -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imgWaterDrop500ml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_500ml"
                    android:contentDescription="@string/water_drop_350ml"
                    android:onClick="onWaterDropClick" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_drop_500ml"/>
            </LinearLayout>
            <!-- Water Drop 1000ml -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imgWaterDrop1000ml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_1000ml"
                    android:contentDescription="@string/water_drop_1000ml"
                    android:onClick="onWaterDropClick" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_drop_1000ml"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
